fixed spacing and added more styling

--- a/styles.css
+++ b/styles.css
@@ -97,8 +97,6 @@ a{
     background-color: #333333;
     padding-top: 5%;
     padding-bottom: 5%;
-    padding-left: 5px;
-    padding-right: 5px;
     border-style: solid;
     border-width: 5px;
     border-color: black;
@@ -108,6 +106,8 @@ a{
 .text{
     padding-top: 5%;
     padding-bottom: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .projectHolder{
@@ -148,7 +148,10 @@ a{
 
 .Description{
     font-size: 1em;
-    padding: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .contact{
@@ -169,16 +172,18 @@ a{
 .footer{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+
 }
 
 @media only screen and (min-width: 768px) {
     /* For computers: */
     .Header{
         font-size: 1.5em;
+        margin-bottom: 1%;
     }
     .profile{
         width: 5%;
+        padding-top: 5px;
     }
     .About{
         padding-top: 1%;
